--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,15 +1,20 @@
-*{
-    box-sizing: border-box;
+body{
+  margin: 0;
 }
 .App{
     display: flex;
     justify-content: center;
-    align-items: start;
-    width: 100vw;
+    align-items: flex-start;
+    width: 100%;
     flex-wrap: wrap;
-    height: 100vh;
+    min-height: 100vh;
     background-color: rgb(138, 43, 226);
-
+    margin: 0;
+    padding: 0;
+}
+#root{
+  margin: 0;
+  padding: 0;
 }
 .buttonContainer{
     width: 100%;
@@ -87,8 +92,8 @@
 
 .characterListContainer{
     width: 100%;
+    justify-content: space-evenly;
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
 }
 
@@ -105,8 +110,8 @@
     border: none;
     border-radius: 15px;
     box-shadow: 0 9px rgb(0, 247, 70);
-}
-
+    width: 100%
+  }
 
 
 .table{
@@ -154,14 +159,26 @@ color: #fff;
     text-align: center;
 
 }
-.form{
+form{
+  box-shadow: 10px 9px rgb(182, 33, 212);
     display: flex;
     width: 100%;
-    border: 34px #666;
+    border: 2px solid rgb(203, 13, 203);
     justify-content: center;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    height: 450px;
+    border-radius: 14px;
+}
+.containerDelContainer{
+  width: 100%;
+display: flex;
+justify-content: center;
+height: 535px;
+}
+.formContainer{
+  width: 30%;
 }
 .form-group{
     width: 100%; 
@@ -193,6 +210,7 @@ color: #fff;
 .btnContainer{
     display: flex;
     justify-content: center;
+    width: 90%;
 }
 
 
@@ -203,9 +221,12 @@ color: #fff;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
+
+
 .formTitle{
     color: #fff;
 }
+
 
 .lds-roller {
     display: inline-block;
